--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/bio/v1/bio/bio.html
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/bio/v1/bio/bio.html
@@ -10,7 +10,7 @@
             <div class="bio_close_button" onclick="bio_closePopup('#coe__bio_details_popup')"></div>
          </div>
          <div class="bio_popup_scrollable">
-            <div id="coe__bio_popup_detail_content">this is popup detail content</div>
+            <div id="coe__bio_popup_detail_content"></div>
          </div>
       </div>
    </div>
